tests/ui/const-generics/generic_const_exprs/error_in_ty.stderr
error[E0425]: cannot find value `x` in this scope
  --> $DIR/error_in_ty.rs:6:31
   |
LL | pub struct A<const z: [usize; x]> {}
   |                    -          ^ help: a const parameter with a similar name exists: `z`
   |                    |
   |                    similarly named const parameter `z` defined here

error[E0592]: duplicate definitions with name `B`
  --> $DIR/error_in_ty.rs:12:5
   |
LL |     pub const fn B() {}
   |     ^^^^^^^^^^^^^^^^ duplicate definitions for `B`
...
LL |     pub const fn B() {}
   |     ---------------- other definition for `B`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0425, E0592.
For more information about an error, try `rustc --explain E0425`.
